tests/integration/snapshots/integration__snapshot__cache_poisoning-10.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"cache-poisoning/publisher-step.yml\")).run()?"
snapshot_kind: text
---
error[cache-poisoning]: runtime artifacts potentially vulnerable to a cache poisoning attack
  --> @@INPUT@@:25:9
   |
18 |         uses: Swatinem/rust-cache@82a92a6e8fbeee089604da2575dc567ae9ddeaab
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cache enabled by default here
19 |
...
24 |       - name: Publish draft release on Github
25 |         uses: softprops/action-gh-release@01570a1f39cb168c169c802c3bceb9e93fb10974
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ runtime artifacts usually published here
   |
   = note: audit confidence → Low

3 findings (2 suppressed): 0 unknown, 0 informational, 0 low, 0 medium, 1 high
