tests/integration/snapshots/integration__snapshot__cache_poisoning-6.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"cache-poisoning/caching-opt-out.yml\")).run()?"
snapshot_kind: text
---
No findings to report. Good job! (1 suppressed)
