tests/integration/snapshots/integration__snapshot__cache_poisoning-8.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"cache-poisoning/workflow-tag-trigger.yml\")).run()?"
snapshot_kind: text
---
error[cache-poisoning]: runtime artifacts potentially vulnerable to a cache poisoning attack
  --> @@INPUT@@:1:1
   |
 1 | / on:
 2 | |   push:
 3 | |     tags:
 4 | |       - "**"
   | |____________^ generally used when publishing artifacts generated at runtime
 5 |
...
17 |         - name: Setup CI caching
18 |           uses: Swatinem/rust-cache@82a92a6e8fbeee089604da2575dc567ae9ddeaab
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cache enabled by default here
   |
   = note: audit confidence → Low

2 findings (1 suppressed): 0 unknown, 0 informational, 0 low, 0 medium, 1 high
